                       ***********************************
                       ** bridgesampling VERSION 0.8-x **
                       ***********************************

                    Changes in bridgesampling Version 0.8-x
                    Released December 2019
                    
  Significant User Visible Changes and New Features
  
    o Disabled use of mvnfast and revetred back to mvtnorn. see also:
      https://github.com/quentingronau/bridgesampling/issues/20


  Bugfixes
  
  

                       ***********************************
                       ** bridgesampling VERSION 0.7-x **
                       ***********************************

                    Changes in bridgesampling Version 0.7-x
                    Released June 2019

  Significant User Visible Changes and New Features

  o Better error message in case all samples from proposal distribution 
    evaluate to NA with log_posterior.
  
  Bugfixes
  
  o bridge_sampler more robust in case of extreme numerical values while 
    running iterative scheme. Addresses #14.
    
  o Better error message in case samples are outside parameter bounds.



                       ***********************************
                       ** bridgesampling VERSION 0.6-x **
                       ***********************************

                    Changes in bridgesampling Version 0.6-x
                    Released October 2018

  Significant User Visible Changes and New Features

  o Added nimble vignette (Hierarchical Normal Example)

  o Added accepted JSS version of introductory paper, but kept existing version 
    as extended version. 

  Bugfixes

  o R CMD check on the package tar.gz should now run without packages that are  
    in suggests installed (if the corresponding environment variable is set). 
    Also, all vignettes should compile without suggested packages (achieved by
    precalculating the results and then loading them).  

