@@ -7,12 +7,16 @@
                     
   Significant User Visible Changes and New Features
   
-    o Disabled use of mvnfast and revetred back to mvtnorn. see also:
-      https://github.com/quentingronau/bridgesampling/issues/20
+  o Disabled use of mvnfast and revetred back to mvtnorn. see also:
+    https://github.com/quentingronau/bridgesampling/issues/20
 
 
   Bugfixes
   
+  o Version 0.7-x introduced a bug that prevented a rerunning of the 
+    iterative scheme based on harmonic mean in case maxit was reached. 
+    This bug should now be removed. See: 
+    https://github.com/quentingronau/bridgesampling/issues/18
   
 
                        ***********************************
